--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "i18next": "^19.4.5",
     "i18next-browser-languagedetector": "^4.2.0",
+    "i18next-xhr-backend": "^3.2.2",
     "popper.js": "^1.16.1",
     "react-bootstrap": "^1.0.1",
     "react-i18next": "^11.5.0",
